@@ -1,10 +1,14 @@
-$Id: Changelog,v 1.3 2010-06-20 18:28:32 oops Exp $
+$Id: Changelog,v 1.4 2010-06-22 03:23:55 oops Exp $
 
 python KRISP Module Changelog
 
 
 *2.0.0
 --------------------------------------------------------------------------------
+Tue Jun 22 2010
+by JoungKyun.Kim <http://oops.org>
+	- fixed error messages by call-by-reference on search(_ex)
+
 Mon Jun 21 2010
 by JoungKyun.Kim <http://oops.org>
 	- fixed error message processing on search(_ex) api
